--- a/WarehouseMgmt/MainWindow.xaml
+++ b/WarehouseMgmt/MainWindow.xaml
@@ -64,7 +64,7 @@
                         <ColumnDefinition></ColumnDefinition>
                     </Grid.ColumnDefinitions>
 
-                    <Button Grid.Column="0" ToolTip="Import">
+                    <Button Command="{Binding InputCommand}" Grid.Column="0" ToolTip="Import">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition></RowDefinition>
@@ -81,7 +81,7 @@
                         </Grid>
                     </Button>
 
-                    <Button Grid.Column="1" ToolTip="Export">
+                    <Button Command="{Binding OutputCommand}" Grid.Column="1" ToolTip="Export">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition></RowDefinition>
@@ -98,7 +98,7 @@
                         </Grid>
                     </Button>
 
-                    <Button Grid.Column="2" ToolTip="Object">
+                    <Button Command="{Binding ObjectCommand}" Grid.Column="2" ToolTip="Object">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition></RowDefinition>
@@ -115,7 +115,7 @@
                         </Grid>
                     </Button>
 
-                    <Button Grid.Column="3" ToolTip="Unit">
+                    <Button Command="{Binding UnitCommand}" Grid.Column="3" ToolTip="Unit">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition></RowDefinition>
@@ -132,7 +132,7 @@
                         </Grid>
                     </Button>
 
-                    <Button Grid.Column="4" ToolTip="Supplier">
+                    <Button Command="{Binding SupplierCommand}" Grid.Column="4" ToolTip="Supplier">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition></RowDefinition>
@@ -149,7 +149,7 @@
                         </Grid>
                     </Button>
 
-                    <Button Grid.Column="5" ToolTip="Customer">
+                    <Button Command="{Binding CustomerCommand}" Grid.Column="5" ToolTip="Customer">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition></RowDefinition>
@@ -162,6 +162,23 @@
                             <Grid Grid.Row="1">
                                 <materialDesign:PackIcon Kind="ManMan" Width="24" Height="24"
                                                          HorizontalAlignment="Center"/>
+                            </Grid>
+                        </Grid>
+                    </Button>
+
+                    <Button Grid.Column="6" Command="{Binding UserCommand}" ToolTip="User">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <Grid Grid.Row="0">
+                                <TextBlock Text="User" HorizontalAlignment="Center"></TextBlock>
+                            </Grid>
+                            <Grid Grid.Row="1">
+                                <materialDesign:PackIcon Width="24" Height="24"  
+                                                         HorizontalAlignment="Center"  
+                                                         Kind="AccountMultiple" />
                             </Grid>
                         </Grid>
                     </Button>
@@ -235,7 +252,7 @@
                                                 <RowDefinition Height="Auto" />
                                             </Grid.RowDefinitions>
                                             <TextBlock Grid.Row="0" Margin="16 16 16 4"     
-                                                       Text="Tồn kho"
+                                                       Text="Import Volume"
                                                        Style="{StaticResource MaterialDesignHeadlineTextBlock}">
 
                                             </TextBlock>
@@ -255,9 +272,63 @@
                                 </Grid>
 
                                 <Grid Grid.Column="1">
+                                    <materialDesign:Card Background="#03a9f4"  Margin="5"
+                                                         Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}"  
+                                                         Padding="0" Width="200">
+                                        <Grid>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto" />
+                                                <RowDefinition Height="Auto" />
+                                                <RowDefinition Height="Auto" />
+                                            </Grid.RowDefinitions>
+                                            <TextBlock Grid.Row="0" Margin="16 16 16 4"     
+                                                       Text="Export Volume"
+                                                       Style="{StaticResource MaterialDesignHeadlineTextBlock}">
+
+                                            </TextBlock>
+                                            <Separator Grid.Row="1" Style="{StaticResource MaterialDesignLightSeparator}" />
+                                            <TextBlock Grid.Row="2" Margin="16 0 16 8" VerticalAlignment="Center" 
+                                                       HorizontalAlignment="Left"      
+                                                       Text="998568"
+                                                       Style="{StaticResource MaterialDesignDisplay1TextBlock}">
+                                            </TextBlock>
+                                            <materialDesign:PopupBox HorizontalAlignment="Right" Padding="2 0 2 0">
+                                                <StackPanel>
+                                                    <!--đưa gì vào thì đưa-->
+                                                </StackPanel>
+                                            </materialDesign:PopupBox>
+                                        </Grid>
+                                    </materialDesign:Card>
                                 </Grid>
 
                                 <Grid Grid.Column="2">
+                                    <materialDesign:Card Background="#03a9f4"  Margin="5"
+                                                         Foreground="{DynamicResource PrimaryHueDarkForegroundBrush}"  
+                                                         Padding="0" Width="200">
+                                        <Grid>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto" />
+                                                <RowDefinition Height="Auto" />
+                                                <RowDefinition Height="Auto" />
+                                            </Grid.RowDefinitions>
+                                            <TextBlock Grid.Row="0" Margin="16 16 16 4"     
+                                                       Text="Stock-in-trade"
+                                                       Style="{StaticResource MaterialDesignHeadlineTextBlock}">
+
+                                            </TextBlock>
+                                            <Separator Grid.Row="1" Style="{StaticResource MaterialDesignLightSeparator}" />
+                                            <TextBlock Grid.Row="2" Margin="16 0 16 8" VerticalAlignment="Center" 
+                                                       HorizontalAlignment="Left"      
+                                                       Text="998568"
+                                                       Style="{StaticResource MaterialDesignDisplay1TextBlock}">
+                                            </TextBlock>
+                                            <materialDesign:PopupBox HorizontalAlignment="Right" Padding="2 0 2 0">
+                                                <StackPanel>
+                                                    <!--đưa gì vào thì đưa-->
+                                                </StackPanel>
+                                            </materialDesign:PopupBox>
+                                        </Grid>
+                                    </materialDesign:Card>
                                 </Grid>
                             </Grid>
                         </Grid>
@@ -308,9 +379,9 @@
                             <ListView>
                                 <ListView.View>
                                     <GridView>
-                                        <GridViewColumn Header="No."></GridViewColumn>
-                                        <GridViewColumn Header="Obj Name"></GridViewColumn>
-                                        <GridViewColumn Header="Quantity"></GridViewColumn>
+                                        <GridViewColumn Width="80" Header="No."></GridViewColumn>
+                                        <GridViewColumn Width="150" Header="Obj Name"></GridViewColumn>
+                                        <GridViewColumn Width="150" Header="Quantity"></GridViewColumn>
                                     </GridView>
                                 </ListView.View>
                             </ListView>
